# Dev_services_public

./: Cargo.toml  Dockerfile  README.md  run.sh  run_net.sh  setup.json  setup.schema.json  test.js
npx_package/: package.json
src/: \  cli.rs  handle_services.rs  http.rs  main.rs  networking.rs  parsing.rs  runtime.rs  services.rs  structs.rs
src/structs/: components.rs  data.rs  http.rs
static/: index.html  page.html
