[package]
name = "dev_services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
regex = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = {version="1.0.99"}

[[bin]]
name = "dev_services"
path = "src/main.rs"
